--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,39 @@
-img {
+.imgs-container >img {
     cursor: pointer;
     max-width: 150px;
     max-height: 150px;
     margin-top: 10px;
+    border-radius: 8px;
 }
 
+.logo {
+    display: block;
+    width: 400px;
+    margin: 0 auto;
+    opacity: 0.85;
+}
+
+#color {
+    width: 24px;
+    height: 24px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background-color: lightblue;
+}
 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    margin-bottom: 20px;
+    background-image: url("../style-imgs/bg.jpg");
+    align-items: center;
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+
 }
 
 h1 {
@@ -27,9 +44,10 @@ h1 {
 .imgs-container {
     display: flex;
     flex-wrap: wrap;
+    max-width: 700px;
     justify-content: center;
     gap: 10px;
-    margin-top: 20px;
+    margin: 0 auto;
 }
 
 .imgs-container img {
@@ -57,6 +75,26 @@ canvas {
     text-align: center;
 }
 
+.plus-size {
+    width: 30px;
+    height: 30px;
+    background-image: url('ICONS/increase font - icon.png');
+    background-size: cover;
+    background-position: center center;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.minus-size {
+    width: 30px;
+    height: 30px;
+    background-image: url('ICONS/decrease font - icon.png');
+    background-size: cover;
+    background-position: center center;
+    cursor: pointer;
+    border-radius: 10px;
+
+}
 
 .btn-gallery {
     display: block;
@@ -65,16 +103,31 @@ canvas {
     margin-top: 20px;
     display: none;
     cursor: pointer;
+    border-radius: 10px;
+
 }
 
 .btn-facebook {
     background-color: rgb(109, 109, 252);
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     background-image: url('ICONS/facebook-logo.png');
     background-size: cover;
     background-position: center center;
     cursor: pointer;
+    border-radius: 10px;
+
+}
+
+.btn-switch-line {
+    width: 33px;
+    height: 33px;
+    background-image: url('ICONS/up-and-down-opposite-double-arrows-side-by-side.png');
+    background-size: cover;
+    background-position: center center;
+    cursor: pointer;
+    border-radius: 10px;
+
 }
 
 .btn-download {
@@ -82,7 +135,6 @@ canvas {
     text-decoration: none;
     background-color: #4CAF50;
     color: white;
-
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
@@ -93,10 +145,10 @@ canvas {
 }
 
 .buttons {
-
     display: block;
     margin: 0 auto;
     text-align: center;
-    margin-top: 20px;
+
     display: none;
 }
+
