--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.imgs-container >img {
+.imgs-container>img {
     cursor: pointer;
     max-width: 150px;
     max-height: 150px;
@@ -152,3 +152,49 @@ canvas {
     display: none;
 }
 
+.random-meme {
+    width: calc(20vw + 6px);
+    height: calc(8vw + 6px);
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 3vw;
+    font-weight: bold;
+    margin: 0 auto;
+
+}
+
+.random-meme:after {
+    content: attr(alt);
+    width: 20vw;
+    height: 8vw;
+    background-color: #3a0235;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.random-meme:hover {
+    animation: slidebg 2s linear infinite;
+}
+
+@keyframes slidebg {
+    to {
+        background-position: 20vw;
+    }
+}
+
+.show-saved {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+
+    /* display: none; */
+}
+
+.saved-memes-container{
+    display: block;
+}
