--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+@font-face {
+    font-family: Pijamas;
+    src: url("FONTS/Pijamas-ejPO.ttf");
+}
+
+@font-face {
+    font-family: Brookeshappell;
+    src: url("FONTS/Brookeshappell8-eoKB.ttf");
+}
+
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-image: url("../style-imgs/bg.jpg");
+    align-items: center;
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: 100px 1vw 2fr;
+    grid-template-areas:
+        "1  "
+        "2  "
+        "3  ";
+}
+
 .imgs-container>img {
     cursor: pointer;
     max-width: 150px;
@@ -6,11 +32,42 @@
     border-radius: 8px;
 }
 
-.logo {
-    display: block;
-    width: 400px;
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 960px;
     margin: 0 auto;
-    opacity: 0.85;
+    grid-area: 1;
+}
+
+.navbar-logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    font-family: Brookeshappell;
+    font-size: 54px;
+    font-weight: bold;
+    color: rgb(43, 43, 175);
+    margin-top: 7px;
+    margin-left: 15px;
+}
+
+.logo>span {
+    color: #7e326f;
+}
+
+.navbar-links {
+    display: flex;
+    gap: 20px;
+}
+
+.navbar-link {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
 }
 
 #color {
@@ -22,13 +79,6 @@
     background-color: lightblue;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-image: url("../style-imgs/bg.jpg");
-    align-items: center;
-}
 
 .container {
     max-width: 800px;
@@ -39,15 +89,18 @@ body {
 h1 {
     text-align: center;
     clear: both;
+    grid-area: 2;
 }
 
 .imgs-container {
     display: flex;
     flex-wrap: wrap;
-    max-width: 700px;
+    max-width: 900px;
     justify-content: center;
     gap: 10px;
     margin: 0 auto;
+    grid-area: 32;
+    margin-top: 20px;
 }
 
 .imgs-container img {
@@ -57,6 +110,7 @@ h1 {
 .meme-maker {
     margin-top: 20px;
     text-align: center;
+    position: relative;
 }
 
 
@@ -96,16 +150,69 @@ canvas {
 
 }
 
-.btn-gallery {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 20px;
-    display: none;
-    cursor: pointer;
-    border-radius: 10px;
 
+.btn-gallery {
+    width: calc(6vw + 6px);
+    height: calc(2vw + 6px);
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 0.8vw;
+    font-weight: bold;
+    margin: 0 auto;
+    margin-top: 7px;
+    color: rgba(255, 255, 255, 0.705);
 }
+
+.btn-gallery:after {
+    content: attr(alt);
+    width: 6vw;
+    height: 2vw;
+    background-color: #3a0235;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-gallery:hover,
+.btn-gallery:hover:after {
+    animation: slidebg 2s linear infinite;
+}
+
+.btn-saved {
+    width: calc(6vw + 6px);
+    height: calc(2vw + 6px);
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 0.8vw;
+    font-weight: bold;
+    margin: 0 auto;
+    margin-top: 7px;
+    color: rgba(255, 255, 255, 0.705);
+}
+
+.btn-saved:after {
+    content: attr(alt);
+    width: 6vw;
+    height: 2vw;
+    background-color: #3a0235;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-saved:hover,
+.btn-saved:hover:after {
+    animation: slidebg 2s linear infinite;
+}
+
 
 .btn-facebook {
     background-color: rgb(109, 109, 252);
@@ -131,7 +238,6 @@ canvas {
 }
 
 .btn-download {
-    display: inline-block;
     text-decoration: none;
     background-color: #4CAF50;
     color: white;
@@ -146,31 +252,31 @@ canvas {
 
 .buttons {
     display: block;
-    margin: 0 auto;
     text-align: center;
 
     display: none;
+    margin-top: 30px;
 }
 
 .random-meme {
-    width: calc(20vw + 6px);
-    height: calc(8vw + 6px);
+    width: calc(6vw + 6px);
+    height: calc(2vw + 6px);
     background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
-    font-size: 3vw;
+    font-size: 1vw;
     font-weight: bold;
     margin: 0 auto;
-
+    margin-top: 7px;
 }
 
 .random-meme:after {
     content: attr(alt);
-    width: 20vw;
-    height: 8vw;
+    width: 6vw;
+    height: 2vw;
     background-color: #3a0235;
     display: flex;
     align-items: center;
@@ -187,20 +293,29 @@ canvas {
     }
 }
 
-.show-saved {
+.saved-memes-container {
     display: block;
+    grid-area: 2;
     margin: 0 auto;
-    text-align: center;
-    margin-top: 15px;
-    background-color: #430246;
-    color: white;
-    border-radius: 15px;
-border-color: white;
+    align-self: start;
 
-    /* display: none; */
 }
 
-.saved-memes-container{
-    display: block;
-    
+.general-meme {
+    grid-area: 3;
+    display: grid;
+    grid-template-columns: 500px 1fr;
+    grid-template-areas:
+        "1  2"
+    ;
+}
+
+.general-meme>.canvas-container {
+    grid-area: 1;
+}
+
+
+#textInput {
+    margin-bottom: 30px;
+    margin-top: 40px;
 }
